tests/error/unary_uniq.gw
#! [contains] must be applied to a unique expression
!(1,2);
